se agrega stock inicial y final

--- a/i18n/es_MX.po
+++ b/i18n/es_MX.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 10.0+e-20170815\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-10-23 15:31+0000\n"
-"PO-Revision-Date: 2017-10-23 15:31+0000\n"
+"POT-Creation-Date: 2017-11-17 08:50+0000\n"
+"PO-Revision-Date: 2017-11-17 08:50+0000\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -38,6 +38,11 @@ msgid "Date"
 msgstr "Fecha"
 
 #. module: stock_kardex
+#: model:ir.model.fields,field_description:stock_kardex.field_stock_kardex_detail_location_dest_id
+msgid "Destination Location"
+msgstr "Ubicación destino"
+
+#. module: stock_kardex
 #: model:ir.model.fields,field_description:stock_kardex.field_stock_kardex_stock_kardex_detail_ids
 #: model:ir.ui.view,arch_db:stock_kardex.stock_kardex_view
 msgid "Detail"
@@ -52,7 +57,12 @@ msgstr "Nombre a mostrar"
 #. module: stock_kardex
 #: model:ir.model.fields,field_description:stock_kardex.field_stock_kardex_date_end
 msgid "End Date"
-msgstr "Fecha final"
+msgstr "Fecha finalización"
+
+#. module: stock_kardex
+#: model:ir.model.fields,field_description:stock_kardex.field_stock_kardex_stock_end
+msgid "Ending stock"
+msgstr "Stock Final"
 
 #. module: stock_kardex
 #: model:ir.model.fields,field_description:stock_kardex.field_stock_kardex_detail_id
@@ -97,6 +107,11 @@ msgid "Location"
 msgstr "Ubicación"
 
 #. module: stock_kardex
+#: model:ir.model.fields,help:stock_kardex.field_stock_kardex_detail_location_dest_id
+msgid "Location where the system will stock the finished products."
+msgstr "Ubicación donde el sistema almacenará los productos finalizados."
+
+#. module: stock_kardex
 #: model:ir.model.fields,field_description:stock_kardex.field_stock_kardex_detail_stock_move_id
 msgid "Move"
 msgstr "Movimiento"
@@ -122,9 +137,24 @@ msgid "Quantity Total"
 msgstr "Cantidad Total"
 
 #. module: stock_kardex
+#: model:ir.model.fields,help:stock_kardex.field_stock_kardex_detail_location_id
+msgid "Sets a location if you produce at a fixed location. This can be a partner location if you subcontract the manufacturing operations."
+msgstr "Indica una ubicación si se producen en una ubicación fija. Puede ser una ubicación de empresa si subcontrata las operaciones de fabricación."
+
+#. module: stock_kardex
+#: model:ir.model.fields,field_description:stock_kardex.field_stock_kardex_detail_location_id
+msgid "Source Location"
+msgstr "Ubicación origen"
+
+#. module: stock_kardex
 #: model:ir.model.fields,field_description:stock_kardex.field_stock_kardex_date_start
 msgid "Start Date"
 msgstr "Fecha de inicio"
+
+#. module: stock_kardex
+#: model:ir.model.fields,field_description:stock_kardex.field_stock_kardex_stock_start
+msgid "Starting stock"
+msgstr "Stock Inicial"
 
 #. module: stock_kardex
 #: model:ir.model.fields,help:stock_kardex.field_stock_kardex_detail_move_qty_product
